# dagens-ord

./: LICENSE  README.md  bun.lockb  index.html  package.json  tailwind.config.js
.github/: main.yml
.github/workflows/: main.yml  main_dagensord-fastapi.yml  pull_request.yml
admin-app/: bun.lockb  package.json  vite.config.ts
admin-app/src/: api-client.ts  types.ts
client/: bun.lockb  index.html  package.json  tailwind.config.js
client-app/: README.md  vite.config.ts
client/src/: App.tsx  api-client.ts  color-context.tsx  config.ts  index.css  main.tsx  routeTree.gen.ts  style.css
dashboard/: README.md  bun.lockb  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: api-client.ts  app.css  app.html  types.ts
server/: .dockerignore  Dockerfile  README.md  build.gradle.kts  docker-compose.yml  fly.toml  gradle.properties  main.py  pyproject.toml  requirements.txt  vercel.json
server/api/: expression.py  main.py
server/server/: expression.py  main.py
server/src/main/kotlin/dagensord/: Application.kt
server/src/main/kotlin/dagensord/db/: ExpressionRepository.kt  supabase.kt
server/src/main/kotlin/dagensord/model/: Expression.kt
server/src/main/kotlin/dagensord/plugins/: Routing.kt
server/src/test/kotlin/dagensord/: ApplicationTest.kt
src/: api-client.ts  color-context.tsx  main.tsx  routeTree.gen.ts  types.ts  vite-env.d.ts
src/components/: expression-counter.tsx  expression.tsx  logo.tsx  navbar.tsx  navlink.tsx  search-bar.tsx  search-results.tsx  streak.tsx  suggestion-form.tsx
src/context/: search-context.tsx
(+54 files in other folders)
