[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Markus A. R. Johansen <90006516+MarkusJohansen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.0"}
supabase = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
